refactor(docker): add non-root user and required tools to FE & BE Dockerfiles

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ docker-compose-command.md
 step-push-source-to-github.md
 set-up-connection-github-gitlab.md
 .DS_Store
+./frontend/Dockerfile_backup
